translation-tool/inputs/source_meta/objects/HughesSvc_ProviderGroupMember__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings stores the mapping between interface, logged in user and the provider group</description>
    <fields>
        <fullName>Interface__c</fullName>
        <label>Interface</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Group__c</fullName>
        <label>Provider Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HughesSvc_ProviderGroupMember</label>
</CustomObject>